--- a/_posts/2021-08-25-组件架构.md
+++ b/_posts/2021-08-25-组件架构.md
@@ -1,3 +1,15 @@
+---
+title: 组件化框架
+author: nate_fu
+date: 2021-08-25
+category: Jekyll
+layout: post
+---
+
+
+
+
+
 # 组件化框架
 ## 背景
 &emsp;&emsp;伴随着APP端项目的发展，业务逻辑日趋复杂，项目模块耦合严重。频繁的需求迭代使得重复造车代码冗余现象严重。传统的开发方式存在诸多弊端，已经不再使用当前的业务环境。因此需要新的思想设计新的框架从而满足需求的支撑。
